language/move-lang/tests/move_check/typing/type_variable_join_threaded_unpack_invalid.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:34:9
   │
30 │     fun t0(): bool {
   │               ---- Expected: 'bool'
31 │         let v = Container::new();
32 │         let Box { f1, f2 }  = Container::get(&v);
   │             -------------- Given: integer
33 │         Container::put(&mut v, Box { f1: 0, f2: 0});
34 │         f1
   │         ^^ Invalid return expression

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:39:31
   │
10 │     public fun get<V: drop>(self: &T<V>): V {
   │                       ---- 'drop' constraint declared here
   ·
39 │         let Box { f1, f2 }  = Container::get(&v);
   │             --------------    ^^^^^^^^^^^^^^^^^^ 'drop' constraint not satisifed
   │             │                  
   │             The type '0x2::M::Box<0x2::M::R>' does not have the ability 'drop'
   │             The type '0x2::M::Box<0x2::M::R>' can have the ability 'drop' but the type argument '0x2::M::R' does not have the required ability 'drop'

